[package]
name = "rp2040-serial-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cortex
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
# defmt
defmt = "0.3"
defmt-serial = "0.6"
# panic
panic-probe = { version = "0.3", features = ["print-defmt"] }
# embassy
rp2040-boot2 = { version = "0.3" }
embassy-net-driver-channel = { path = "../../embassy/embassy-net-driver-channel" }
embassy-futures = { path = "../../embassy/embassy-futures" }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
embassy-executor = { path = "../../embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { path = "../../embassy/embassy-time", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { path = "../../embassy/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-embedded-hal = { path = "../../embassy/embassy-embedded-hal", features = ["defmt"] }
cyw43 = { path = "../../embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { path = "../../embassy/cyw43-pio", features = ["defmt", "overclock"] }
# embedded hal
embedded-hal = { version = "=1.0.0-rc.1" }
# static cell
static_cell = { version = "1.1", features = ["nightly"] }
# bleps
bleps = { path = "../bleps", features = ["macros"] }
